fix: use URI instead of URL for Media, update Spring Boot 4.1.0 and Spring AI 2.0.0 GA